# AIRiddleMaker

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  riddle.toml
.codex-home/: AGENTS.md  config.toml
.codex-home/.codex/: config.toml
.codex-home/.codex/agents/: scorer.toml
.codex-home/agents/: scorer.md  scorer.toml
.codex-home/skills/: generate.md
.codex/skills/blog-editor-skill/: SKILL.md
.codex/skills/content-production/: SKILL.md
.codex/skills/dispatching-parallel-agents/: SKILL.md
.codex/skills/docs-search/: SKILL.md
.codex/skills/finishing-a-development-branch/: SKILL.md
.codex/skills/receiving-code-review/: SKILL.md
.codex/skills/subagent-driven-development/: SKILL.md
.codex/skills/using-git-worktrees/: SKILL.md
docs/blog/: 2026-04-08-qiita-draft-airiddlemaker.editorial-review.md  2026-04-08-qiita-draft-airiddlemaker.md  chatgpt_54_thinking_answer.md
docs/incidents/: 2026-04-06-codex-scorer-forgery.md
docs/paper/: 01_research_report_llm_riddle_generation.md  2508.18709v3.pdf:Zone.Identifier
docs/plans/: 2026-04-06-config-model-decoupling.md  2026-04-06-ephemeral-codex-home.md  2026-04-06-riddle-maker-mvp.md  2026-04-06-scorer-mcp-server.md  2026-04-07-brave-search-scorer.md  2026-04-07-refactor-service-threshold-output.md
src/riddle/: brave_search.py  config.py  log_stream.py  main.py  models.py  scorer_prompt.md  scorer_server.py  service.py
tests/: test_brave_search.py  test_config.py  test_log_stream.py  test_main.py  test_models.py  test_scorer_server.py  test_service.py  test_subagent_config.py
(+4 files in other folders)
