[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/riddle"]

[project]
name = "ai-riddle-maker"
version = "0.1.0"
description = "日本語特化なぞなぞ生成システム"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.scripts]
riddle = "riddle.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
